--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "mongo",
     "mongodb"
   ],
-  "author": "Adam Peryman <adam.peryman@gmail.com",
+  "author": "Adam Peryman <adam.peryman@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/x0bile/happy-mongoose-timestamps/issues"
@@ -44,5 +44,8 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10"
   }
 }
