--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,17 +2,22 @@ env:
   browser: true
   es6: true
   node: true
+
 extends:
-  - 'eslint:recommended'
-  - 'standard'
+  - eslint:recommended
+  - standard
+
+parser: babel-eslint
+
 parserOptions:
+  sourceType: module
   ecmaFeatures:
     experimentalObjectRestSpread: true
     jsx: true
-  sourceType: module
-parser: babel-eslint
+
 plugins:
   - standard
+
 rules:
   no-console:
     - warn
