--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "keywords": [
     "mongoose",
     "plugin",
+    "hook",
+    "hooks",
     "createdAt",
     "updatedAt",
     "created",
@@ -22,7 +24,10 @@
     "at",
     "happy",
     "mongo",
-    "mongodb"
+    "mongodb",
+    "blacklist",
+    "black",
+    "list"
   ],
   "author": "Adam Peryman <adam.peryman@gmail.com>",
   "license": "MIT",
