--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@babel/core": "^7.0.0-beta.36",
     "@babel/node": "^7.0.0-beta.36",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.36",
-    "@babel/polyfill": "^7.0.0-beta.36",
     "@babel/preset-env": "^7.0.0-beta.36",
     "babel-eslint": "^8.1.2",
     "eslint": "^4.14.0",
@@ -50,5 +49,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.54"
+  }
 }
